1. 针对项目生成了8条rules 2. 根据rules编写了5阶段的开发指导文档 3. 对上述内容进行了2-3次的整体优化 4. 进行了项目初始化

--- a/开发指导/01-项目初始化指南.md
+++ b/开发指导/01-项目初始化指南.md
@@ -15,73 +15,89 @@
 
 ---
 
-# 📖 适用规范清单
+## 📖 适用规范清单
 
-本阶段开发遵循以下规范要求，所有规范文件位于 `.qoder/rules/` 目录：
+本阶段开发遵循以下规范要求,所有规范文件位于 `.qoder/rules/` 目录:
 
 ### 核心规范
 
-#### 1. 开发需求规范 (`.qoder/rules/requirements-spec.zh-CN.md`)
-- **[规则 1] 生成完整可运行代码** (第19行)
-  - 代码必须可立即执行，不允许使用占位符
-  - 包含所有必要的 import、依赖和配置
-  - 不允许 TODO 注释或"稍后实现"的说明
+#### 1. 开发需求规范
+文件路径: `.qoder/rules/requirements-spec.zh-CN.md`
 
-- **[规则 3] 最小化新增依赖** (第68行)
+- **[规则 1] 生成完整可运行代码** → 第20行
+  - 代码必须可立即执行,不允许使用占位符
+  - 包含所有必要的 import、依赖和配置
+
+- **[规则 3] 最小化新增依赖** → 第69行
   - 优先使用项目现有依赖
   - 添加新依赖需要充分理由
-  - 添加前检查 package.json
 
-- **[规则 10] 确保代码成功编译** (第170行)
+- **[规则 9] 功能优先于完美** → 第163行
+  - 可工作的代码 > 完美的代码
+  - 先让项目运行起来，再优化
+
+- **[规则 10] 确保代码成功编译** → 第171行
   - 所有代码必须能编译/运行且无错误
-  - 交付前检查语法
   - 验证 import 和依赖是否正确
 
-- **[规则 13] 只使用真实存在的库** (第198行)
+- **[规则 13] 只使用真实存在的库** → 第199行
   - 导入前验证包是否存在
-  - 不要使用虚构或编造的包
   - 确认库版本兼容性
 
-#### 2. 工作流规范 (`.qoder/rules/workflow-spec.zh-CN.md`)
-- **[规则 2] 版本号管理** (第49行)
-  - 遵循语义化版本控制（MAJOR.MINOR.PATCH）
-  - 发布时更新 package.json 中的版本
-  - 更新所有相关文件中的版本
+#### 2. 工作流规范
+文件路径: `.qoder/rules/workflow-spec.zh-CN.md`
 
-- **[规则 6] 文档同步** (第140行)
+- **[规则 2] 版本号管理** → 第50行
+  - 遵循语义化版本控制(MAJOR.MINOR.PATCH)
+  - 发布时更新 package.json 中的版本
+
+- **[规则 6] 文档同步** → 第141行
   - 修改代码时更新相关文档
   - 添加新功能时更新 README
-  - 更改函数行为时更新内联注释
 
-- **[规则 10] 依赖更新策略** (第228行)
+- **[规则 10] 依赖更新策略** → 第229行
   - 定期审查依赖更新
-  - 在添加新依赖前检查安全漏洞
   - 避免已弃用或无人维护的包
 
-#### 3. 命名约定 (`.qoder/rules/naming-conventions.zh-CN.md`)
-- **[约定 5] 文件命名** (第153行)
-  - 文件使用 kebab-case（小写带连字符）
-  - 在目录中分组相关文件
-  - 配置文件使用 .config 后缀
+#### 3. 命名约定
+文件路径: `.qoder/rules/naming-conventions.zh-CN.md`
 
-- **[约定 9] 环境变量命名** (第276行)
+- **[约定 5] 文件命名** → 第154行
+  - 文件使用 kebab-case(小写带连字符)
+  - 在目录中分组相关文件
+
+- **[约定 9] 环境变量命名** → 第277行
   - 使用 UPPER_SNAKE_CASE
   - 使用公共前缀分组相关变量
-  - 明确说明变量用途
 
 ### 质量规范
 
-#### 4. 安全规范 (`.qoder/rules/security-spec.zh-CN.md`)
-- **[规则 4] 依赖安全管理** (第127行)
-  - 定期运行安全扫描（npm audit）
-  - 不使用已知漏洞的依赖版本
-  - 最小化依赖数量，减少攻击面
+#### 4. 安全规范
+文件路径: `.qoder/rules/security-spec.zh-CN.md`
 
-- **[规则 8] 安全配置管理** (第230行)
+- **[规则 4] 依赖安全管理** → 第128行
+  - 定期运行安全扫描(npm audit)
+  - 不使用已知漏洞的依赖版本
+
+- **[规则 8] 安全配置管理** → 第231行
   - 不在代码中硬编码密钥、密码、API 令牌
   - 使用环境变量管理配置
   - 不提交 .env 文件到版本控制
-  - 生产环境关闭调试模式
+
+### 项目设计参考文档
+
+#### 技术方案文档
+文件路径: `技术方案v1.0.md`
+
+- **架构选型** → 第7-83行
+  - 双目标混合架构(桌面版+Web版)
+  - 平台支持和统一代码库
+  - 渐进式体验设计
+
+- **技术栈选型** → 第124-285行
+  - Electron + React + Vite
+  - Context7工具验证结果
+  - 构建和部署工具链
 
 ---
 
@@ -138,10 +154,12 @@ Windows Desktop Clock Utility/
 ### 步骤 1.2：初始化 Electron + Vite + React 项目
 
 **适用规范**: 
-- `.qoder/rules/requirements-spec.zh-CN.md` - [规则 13] 只使用真实存在的库 (第198行)
+- `.qoder/rules/requirements-spec.zh-CN.md` - [规则 13] 只使用真实存在的库 (第199行)
   - 导入前验证包是否存在，确认库版本兼容性
-- `.qoder/rules/requirements-spec.zh-CN.md` - [规则 3] 最小化新增依赖 (第68行)
+- `.qoder/rules/requirements-spec.zh-CN.md` - [规则 3] 最小化新增依赖 (第69行)
   - 优先使用项目现有依赖，添加新依赖需要充分理由
+- `.qoder/rules/requirements-spec.zh-CN.md` - [规则 9] 功能优先于完美 (第163行)
+  - 先让项目初始化成功，后续再优化配置
 
 **操作清单**:
 
@@ -204,6 +222,8 @@ npm install -D electron-vite
 - [ ] 版本号遵循语义化版本控制（MAJOR.MINOR.PATCH）
 - [ ] package.json 包含完整的项目信息
 - [ ] 依赖安装成功，无错误
+- [ ] 最小化依赖（规则3：仅安装必需库）
+- [ ] 功能优先（规则9：项目可初始化成功）
 
 ---
 
@@ -721,6 +741,34 @@ npm install
 完成本阶段后，请继续阅读：
 - **阶段2：UI 框架和样式系统搭建**
 - **阶段3：核心功能实现**
+
+---
+
+---
+
+## 📚 规范文件快速参考
+
+本文档引用的所有规范条款详见:
+
+| 规范类别 | 文件路径 | 规则编号 | 起始行 |
+|---------|---------|---------|--------|
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 1 | 第20行 |
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 3 | 第69行 |
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 10 | 第171行 |
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 13 | 第199行 |
+| 工作流规范 | `.qoder/rules/workflow-spec.zh-CN.md` | 规则 2 | 第50行 |
+| 工作流规范 | `.qoder/rules/workflow-spec.zh-CN.md` | 规则 6 | 第141行 |
+| 工作流规范 | `.qoder/rules/workflow-spec.zh-CN.md` | 规则 10 | 第229行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 5 | 第154行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 9 | 第277行 |
+| 安全规范 | `.qoder/rules/security-spec.zh-CN.md` | 规则 4 | 第128行 |
+| 安全规范 | `.qoder/rules/security-spec.zh-CN.md` | 规则 8 | 第231行 |
+| 技术方案 | `技术方案v1.0.md` | 架构选型 | 第7-83行 |
+| 技术方案 | `技术方案v1.0.md` | 技术栈 | 第124-285行 |
+
+**使用方法**:
+1. 在IDE中使用 `Ctrl+G` (或 `Cmd+G`) 跳转到指定行号
+2. 或在Qoder中使用 `@文件路径` 直接打开规范文件
 
 ---
 
