--- a/开发指导/02-UI框架和样式系统搭建.md
+++ b/开发指导/02-UI框架和样式系统搭建.md
@@ -18,21 +18,50 @@
 ## 📖 适用规范清单
 
 ### 核心规范
-- **开发需求规范**
-  - [规则 1] 生成完整可运行代码
-  - [规则 2] 复用现有代码和API
-  - [规则 12] 尊重项目命名约定
 
-- **命名约定**
-  - [约定 2] 函数/方法命名 (camelCase, 动词开头)
-  - [约定 3] 类命名 (PascalCase, 名词)
-  - [约定 5] 文件命名 (kebab-case)
-  - [约定 6] 组件命名 (PascalCase)
+#### 开发需求规范
+文件路径: `.qoder/rules/requirements-spec.zh-CN.md`
+
+- **[规则 1] 生成完整可运行代码** → 第20行
+- **[规则 2] 复用现有代码和API** → 第48行
+- **[规则 12] 尊重项目命名约定** → 第191行
+
+#### 命名约定
+文件路径: `.qoder/rules/naming-conventions.zh-CN.md`
+
+- **[约定 2] 函数/方法命名** → 第54行 (camelCase, 动词开头)
+- **[约定 3] 类命名** → 第90行 (PascalCase, 名词)
+- **[约定 4] 常量命名** → 第118行 (UPPER_SNAKE_CASE)
+- **[约定 5] 文件命名** → 第154行 (kebab-case)
+- **[约定 6] 组件命名** → 第190行 (PascalCase)
 
 ### 质量规范
-- **测试规范**
-  - [规则 1] 测试完整性
-  - [规则 5] 测试命名约定
+
+#### 测试规范
+文件路径: `.qoder/rules/testing-spec.zh-CN.md`
+
+- **[规则 1] 测试完整性** → 第20行
+- **[规则 5] 测试命名约定** → 第127行
+
+### 设计参考文档
+
+#### 天气鸭原型设计
+文件路径: `天气鸭-原型.html`
+
+- **毛玻璃效果实现** → 第11-20行, 第159-186行
+  - backdrop-filter: blur(10px)
+  - background: rgba(255, 255, 255, 0.4)
+  - 卡片阴影和圆角设计
+
+- **卡片布局设计** → 第118-126行, 第164-189行
+  - 16px圆角统一规范
+  - 渐变背景效果
+  - 悬停动画效果
+
+- **动画效果参考** → 第236-263行, 第300-333行
+  - fadeIn动画(0.8s)
+  - 延迟加载效果
+  - 弹性缓动函数
 
 ---
 
@@ -40,7 +69,13 @@
 
 ### 步骤 2.1：安装和配置 Tailwind CSS
 
-**适用规范**: 开发需求规范 [规则 13] 只使用真实存在的库
+**适用规范**: 
+- 开发需求规范 [规则 13] 只使用真实存在的库 → 第199行
+  - 导入前验证包是否存在，确认库版本兼容性
+- 开发需求规范 [规则 3] 最小化新增依赖 → 第69行
+  - 优先使用项目现有依赖，添加新依赖需要充分理由
+- 开发需求规范 [规则 10] 确保代码成功编译 → 第171行
+  - 所有代码必须能编译/运行且无错误
 
 **安装依赖**:
 
@@ -178,16 +213,21 @@ export default {
 ```
 
 **验收标准**:
-- [ ] Tailwind CSS 配置正确
+- [ ] Tailwind CSS 配置正确（规则10：编译无错误）
 - [ ] 自定义颜色和主题生效
 - [ ] 毛玻璃效果正常显示
 - [ ] 动画效果流畅
+- [ ] 使用真实存在的库（tailwindcss@3已验证）
+- [ ] 最小化依赖（复用PostCSS，不引入额外CSS框架）
 
 ---
 
 ### 步骤 2.2：创建设计令牌系统
 
-**适用规范**: 命名约定 [约定 4] 常量命名 (UPPER_SNAKE_CASE)
+**适用规范**: 
+- 命名约定 [约定 4] 常量命名 (UPPER_SNAKE_CASE) → 第118行
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整实现，不使用占位符或TODO
 
 **创建 src/constants/design-tokens.ts**:
 
@@ -263,17 +303,22 @@ export const BREAKPOINTS = {
 ```
 
 **验收标准**:
-- [ ] 所有常量使用 UPPER_SNAKE_CASE 命名
-- [ ] 使用 as const 确保类型安全
-- [ ] 设计令牌完整且有组织
+- [ ] 所有常量使用 UPPER_SNAKE_CASE 命名（约定4：SPACING、BORDER_RADIUS等）
+- [ ] 使用 as const 确保类型安全（规则1：完整类型定义）
+- [ ] 设计令牌完整且有组织（规则1：无TODO或占位符）
+- [ ] 导出所有必要的常量（规则2：便于其他模块复用）
 
 ---
 
 ### 步骤 2.3：创建基础UI组件 - Button
 
 **适用规范**: 
-- 命名约定 [约定 6] 组件命名 (PascalCase)
-- 命名约定 [约定 2] 函数命名 (camelCase)
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 使用clsx和tailwind-merge工具库，避免重复实现
+- 开发需求规范 [规则 9] 功能优先于完美 → 第163行
+  - 先实现可工作的按钮组件，后续可扩展更多variant
 
 **创建 src/components/Button/Button.tsx**:
 
@@ -371,16 +416,24 @@ npm install clsx tailwind-merge
 ```
 
 **验收标准**:
-- [ ] 组件名使用 PascalCase
-- [ ] 函数名使用 camelCase
-- [ ] 组件功能完整
-- [ ] 类型定义正确
+- [ ] 组件名使用 PascalCase（约定6：Button组件命名）
+- [ ] 函数名使用 camelCase（约定2：cn函数命名）
+- [ ] 组件功能完整（规则1：可立即使用，无TODO）
+- [ ] 类型定义正确（规则1：包含完整的ButtonProps接口）
+- [ ] 复用现有工具库（规则2：使用clsx和tailwind-merge）
+- [ ] 代码可正常编译（规则10：无编译错误）
 
 ---
 
 ### 步骤 2.4：创建基础UI组件 - Card
 
-**适用规范**: 命名约定 [约定 6] 组件命名
+**适用规范**: 
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - Card组件使用PascalCase命名
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的Card组件实现，无占位符
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用cn工具函数进行类名合并
 
 **创建 src/components/Card/Card.tsx**:
 
@@ -450,15 +503,22 @@ export type { CardProps } from './Card';
 ```
 
 **验收标准**:
-- [ ] 毛玻璃效果正常
-- [ ] 悬停动画流畅
-- [ ] 组件可复用
+- [ ] 毛玻璃效果正常（原型设计：backdrop-filter规范）
+- [ ] 悬停动画流畅（规则1：完整实现）
+- [ ] 组件可复用（规则2：可被其他模块导入使用）
+- [ ] 组件命名符合规范（约定6：PascalCase）
 
 ---
 
 ### 步骤 2.5：创建图标组件系统
 
-**适用规范**: 开发需求规范 [规则 13] 只使用真实存在的库
+**适用规范**: 
+- 开发需求规范 [规则 13] 只使用真实存在的库 → 第199行
+  - 使用经过验证的lucide-react图标库
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - Icon组件使用PascalCase命名
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的Icon组件包括类型定义
 
 **安装 Lucide React**:
 
@@ -521,15 +581,22 @@ export type { IconProps, IconName } from './Icon';
 ```
 
 **验收标准**:
-- [ ] 图标库正确安装
-- [ ] 图标可以正常显示
-- [ ] 支持自定义大小和颜色
+- [ ] 图标库正确安装（规则13：使用真实存在的库lucide-react）
+- [ ] 图标可以正常显示（规则1：完整可运行）
+- [ ] 支持自定义大小和颜色（规则1：无占位符，功能完整）
+- [ ] 组件命名符合规范（约定6：Icon使用PascalCase）
 
 ---
 
 ### 步骤 2.6：创建组件库索引
 
-**适用规范**: 开发需求规范 [规则 2] 复用现有代码和API
+**适用规范**: 
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 创建统一导出文件便于其他模块复用组件
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 导出所有类型定义，确保类型安全
+- 命名约定 [约定 5] 文件命名 (kebab-case) → 第154行
+  - 使用index.ts作为模块入口文件
 
 **创建 src/components/index.ts**:
 
@@ -552,15 +619,23 @@ export type { IconProps, IconName } from './Icon';
 ```
 
 **验收标准**:
-- [ ] 所有组件统一导出
-- [ ] 类型定义正确导出
-- [ ] 导入路径简洁
+- [ ] 所有组件统一导出（规则2：便于复用）
+- [ ] 类型定义正确导出（规则1：完整可运行）
+- [ ] 导入路径简洁（规则2：使用@/components统一导入）
 
 ---
 
 ### 步骤 2.7：创建布局组件
 
-**适用规范**: 命名约定 [约定 3] 类命名
+**适用规范**: 
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - AppContainer、Header组件使用PascalCase
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+  - 事件处理函数使用camelCase（onRefresh、onSettings）
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 布局组件功能完整，包含所有必要属性
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用Icon组件和cn工具函数
 
 **创建 src/components/Layout/AppContainer.tsx**:
 
@@ -671,15 +746,24 @@ export type { HeaderProps } from './Header';
 ```
 
 **验收标准**:
-- [ ] 布局组件功能完整
-- [ ] 响应式设计正确
-- [ ] 按钮交互正常
+- [ ] 布局组件功能完整（规则1：完整可运行）
+- [ ] 响应式设计正确（原型设计：375x812px规范）
+- [ ] 按钮交互正常（约定2：事件处理函数使用camelCase）
+- [ ] 组件命名符合规范（约定6：AppContainer、Header使用PascalCase）
 
 ---
 
 ### 步骤 2.8：更新主应用组件
 
-**适用规范**: 开发需求规范 [规则 1] 生成完整可运行代码
+**适用规范**: 
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的App.tsx实现，可立即运行
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用已创建的所有UI组件（AppContainer、Header、Card、Button、Icon）
+- 开发需求规范 [规则 9] 功能优先于完美 → 第163行
+  - 先展示基础UI结构，后续迭代完善功能
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+  - handleRefresh、handleSettings使用camelCase
 
 **更新 src/App.tsx**:
 
@@ -768,18 +852,25 @@ export default App;
 ```
 
 **验收标准**:
-- [ ] 应用正常显示
-- [ ] 所有组件正常工作
-- [ ] 动画效果流畅
-- [ ] 交互响应正常
+- [ ] 应用正常显示（规则1：完整可运行）
+- [ ] 所有组件正常工作（规则2：成功复用Button、Card、Icon等组件）
+- [ ] 动画效果流畅（原型设计：fadeIn动画规范）
+- [ ] 交互响应正常（约定2：handleRefresh等函数使用camelCase）
+- [ ] 代码无编译错误（规则10：确保代码成功编译）
 
 ---
 
 ### 步骤 2.9：编写组件测试
 
 **适用规范**: 
-- 测试规范 [规则 1] 测试完整性
-- 测试规范 [规则 5] 测试命名约定
+- 测试规范 [规则 1] 测试完整性 → 第20行
+  - 新增Button组件必须包含单元测试
+- 测试规范 [规则 5] 测试命名约定 → 第127行
+  - 测试文件使用.test.tsx后缀，用例描述清晰
+- 测试规范 [规则 7] 边界条件测试 → 第186行
+  - 测试disabled和loading等边界状态
+- 测试规范 [规则 8] 测试隔离性 → 第215行
+  - 每个测试用例独立运行，互不影响
 
 **安装测试依赖**:
 
@@ -858,10 +949,11 @@ npm run test
 ```
 
 **验收标准**:
-- [ ] 测试文件使用 .test.tsx 后缀
-- [ ] 测试用例描述清晰
-- [ ] 所有测试通过
-- [ ] 测试覆盖核心功能
+- [ ] 测试文件使用 .test.tsx 后缀（规则5：测试命名约定）
+- [ ] 测试用例描述清晰（规则5：使用"should + 预期行为"格式）
+- [ ] 所有测试通过（规则1：测试完整性）
+- [ ] 测试覆盖核心功能（规则7：包含正常、disabled、loading等场景）
+- [ ] 测试相互隔离（规则8：每个测试独立运行）
 
 ---
 
@@ -901,6 +993,34 @@ npm run test
 完成本阶段后，请继续阅读：
 - **阶段3：天气数据集成和API对接**
 - **阶段4：时钟和报时功能实现**
+
+---
+
+---
+
+## 📚 规范文件快速参考
+
+本文档引用的所有规范条款详见:
+
+| 规范类别 | 文件路径 | 规则编号 | 起始行 |
+|---------|---------|---------|--------|
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 1 | 第20行 |
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 2 | 第48行 |
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 12 | 第191行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 2 | 第54行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 3 | 第90行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 4 | 第118行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 5 | 第154行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 6 | 第190行 |
+| 测试规范 | `.qoder/rules/testing-spec.zh-CN.md` | 规则 1 | 第20行 |
+| 测试规范 | `.qoder/rules/testing-spec.zh-CN.md` | 规则 5 | 第127行 |
+| 原型设计 | `天气鸭-原型.html` | 毛玻璃效果 | 第11-20行 |
+| 原型设计 | `天气鸭-原型.html` | 卡片布局 | 第118-189行 |
+| 原型设计 | `天气鸭-原型.html` | 动画效果 | 第236-333行 |
+
+**使用方法**:
+1. 在IDE中使用 `Ctrl+G` (或 `Cmd+G`) 跳转到指定行号
+2. 或在Qoder中使用 `@文件路径` 直接打开规范文件
 
 ---
 
