--- a/开发指导/04-核心功能实现-天气组件.md
+++ b/开发指导/04-核心功能实现-天气组件.md
@@ -18,31 +18,69 @@
 ## 📖 适用规范清单
 
 ### 核心规范
-- **开发需求规范**
-  - [规则 2] 复用现有代码和API
-  - [规则 11] 有条理地分步骤实现
-  - [规则 12] 尊重项目命名约定
 
-- **命名约定**
-  - [约定 2] 函数命名 (camelCase)
-  - [约定 6] 组件命名 (PascalCase)
-  - [约定 8] Props接口命名 (PascalCase + Props后缀)
+#### 开发需求规范
+文件路径: `.qoder/rules/requirements-spec.zh-CN.md`
+
+- **[规则 2] 复用现有代码和API** → 第48行
+- **[规则 11] 严格遵循提供的示例** → 第183行
+- **[规则 12] 尊重项目命名约定** → 第191行
+
+#### 命名约定
+文件路径: `.qoder/rules/naming-conventions.zh-CN.md`
+
+- **[约定 2] 函数命名** → 第54行 (camelCase)
+- **[约定 4] 常量命名** → 第118行 (UPPER_SNAKE_CASE)
+- **[约定 6] 组件命名** → 第190行 (PascalCase)
+- **[约定 10] 类型/接口命名** → 第307行 (PascalCase)
 
 ### 质量规范
-- **测试规范**
-  - [规则 1] 测试完整性
-  - [规则 3] 可维护性
 
-- **错误处理规范**
-  - [规则 3] 用户友好的错误提示
+#### 测试规范
+文件路径: `.qoder/rules/testing-spec.zh-CN.md`
+
+- **[规则 1] 测试完整性** → 第20行
+- **[规则 3] 测试分层策略** → 第75行
+
+#### 错误处理规范
+文件路径: `.qoder/rules/error-handling-spec.zh-CN.md`
+
+- **[规则 3] 用户友好的错误提示** → 第116行
+
+### 需求验收参考
+
+#### 需求文档
+文件路径: `requirements.md`
+
+- **需求1: 现代化UI设计改进** → 第9-20行
+  - 验收标准: Material Design 3或Fluent Design风格
+  - 毛玻璃效果和卡片布局要求
+
+- **需求2: 丰富的天气动画系统** → 第21-34行
+  - 晴天、雨天、雪天等天气动画
+  - 2秒平滑过渡动画
+
+- **需求6: 现代化卡片式布局设计** → 第72-84行
+  - 蓝色渐变背景和毛玻璃效果
+  - 2x2网格布局展示详细数据
+  - 统一16px圆角
+
+- **需求15: 城市选择和地理定位** → 第201-222行
+  - 默认城市: 上海市宝山区
+  - GeoAPI城市搜索功能
+  - 地理定位和逆地理编码
 
 ---
 
 ## 🚀 实施步骤
 
-### 步骤 4.1：创建天气图标映射
+### 步骤 4.1：创庺天气图标映射
 
-**适用规范**: 命名约定 [约定 4] 常量命名
+**适用规范**: 
+- 命名约定 [约定 4] 常量命名 → 第118行
+  - 使用 UPPER_SNAKE_CASE 命名常量
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的图标映射表，无占位符
 
 **创建 src/constants/weather-icons.ts**:
 
@@ -179,15 +217,28 @@ export function getWeatherColor(code: string): string {
 ```
 
 **验收标准**:
-- [ ] 常量使用 UPPER_SNAKE_CASE
-- [ ] 图标映射完整
-- [ ] 颜色映射合理
+- [ ] 常量使用 UPPER_SNAKE_CASE（约定4：WEATHER_ICON_MAP、WEATHER_COLOR_MAP）
+- [ ] 图标映射完整（规则1：覆盖所有天气状态，包括晴天、雨天、雪天、雾霾等）
+- [ ] 颜色映射合理（需求2：不同天气使用不同颜色主题）
+- [ ] 工具函数完整（规则1：getWeatherIcon和getWeatherColor函数）
+- [ ] 函数命名符合规范（约定2：getWeatherIcon使用camelCase）
+- [ ] 使用as const确保类型安全（规则1：完整的类型定义）
 
 ---
 
 ### 步骤 4.2：创建天气卡片组件
 
-**适用规范**: 命名约定 [约定 6] 组件命名、[约定 8] Props接口命名
+**适用规范**: 
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - WeatherCard组件使用PascalCase命名
+- 命名约定 [约定 10] 类型/接口命名 (PascalCase) → 第315行
+  - WeatherCardProps接口使用PascalCase + Props后缀
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用Card、Icon等基础组件，复用getWeatherIcon等工具函数
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的WeatherCard组件实现
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+  - 事件处理函数使用camelCase（onClick等）
 
 **创建 src/components/Weather/WeatherCard.tsx**:
 
@@ -308,16 +359,29 @@ export const WeatherCard: React.FC<WeatherCardProps> = ({
 ```
 
 **验收标准**:
-- [ ] 组件命名符合规范
-- [ ] Props接口命名正确
-- [ ] 天气信息显示完整
-- [ ] 视觉效果符合设计
+- [ ] 组件命名符合规范（约定6：WeatherCard使用PascalCase）
+- [ ] Props接口命名正确（约定10：WeatherCardProps使用PascalCase + Props后缀）
+- [ ] 天气信息显示完整（规则1：温度、湿度、风速等所有指标）
+- [ ] 视觉效果符合设计（需求1：毛玻璃效果和卡片布局）
+- [ ] 复用现有组件（规则2：使用Card、Icon组件）
+- [ ] 图标和颜色映射正确（规则2：使用getWeatherIcon和getWeatherColor）
+- [ ] 代码可立即运行（规则1：完整实现，包含所有必要的import）
 
 ---
 
 ### 步骤 4.3：创建天气预报列表组件
 
-**适用规范**: 开发需求规范 [规则 2] 复用现有代码和API
+**适用规范**: 
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用getWeatherIcon、getWeatherColor工具函数
+- 开发需求规范 [规则 9] 功能优先于完美 → 第163行
+  - 先实现基础预报展示，后续可增加交互功能
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - ForecastList组件使用PascalCase
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+  - formatDate函数使用camelCase，动词开头
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的7天预报列表实现
 
 **创建 src/components/Weather/ForecastList.tsx**:
 
@@ -430,16 +494,29 @@ export const ForecastList: React.FC<ForecastListProps> = ({
 ```
 
 **验收标准**:
-- [ ] 预报列表显示正确
-- [ ] 日期格式化正确
-- [ ] 图标和颜色匹配
-- [ ] 交互动画流畅
+- [ ] 预报列表显示正确（规则1：显示7天预报数据）
+- [ ] 日期格式化正确（规则1：今天/明天/周几显示）
+- [ ] 图标和颜色匹配（规则2：使用getWeatherIcon和getWeatherColor）
+- [ ] 交互动画流畅（需求2：2秒平滑过渡动画）
+- [ ] 复用工具函数（规则2：复用getWeatherIcon/Color）
+- [ ] 组件命名符合规范（约定6：ForecastList使用PascalCase）
+- [ ] 函数命名符合规范（约定2：formatDate使用camelCase）
 
 ---
 
 ### 步骤 4.4：创建24小时预报组件
 
-**适用规范**: 命名约定 [约定 2] 函数命名
+**适用规范**: 
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+  - formatHour函数使用camelCase，动词开头
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - HourlyForecast组件使用PascalCase
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用Card、Icon组件和getWeatherIcon工具函数
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的24小时预报实现，包括横向滚动
+- 命名约定 [约定 1] 变量命名 (camelCase) → 第20行
+  - scrollRef变量使用camelCase
 
 **创建 src/components/Weather/HourlyForecast.tsx**:
 
@@ -562,16 +639,30 @@ export const HourlyForecast: React.FC<HourlyForecastProps> = ({
 ```
 
 **验收标准**:
-- [ ] 横向滚动正常
-- [ ] 时间格式化正确
-- [ ] 降水概率显示合理
-- [ ] 滚动条样式美观
+- [ ] 横向滚动正常（规则1：实现smooth滚动效果）
+- [ ] 时间格式化正确（规则1：现在/HH:mm显示）
+- [ ] 降水概率显示合理（规则9：仅当>30%时显示）
+- [ ] 滚动条样式美观（需求1：隐藏滚动条，保持简洁）
+- [ ] 组件命名符合规范（约定6：HourlyForecast使用PascalCase）
+- [ ] 函数命名符合规范（约定2：formatHour使用camelCase）
+- [ ] 变量命名符合规范（约定1：scrollRef使用camelCase）
+- [ ] 复用现有组件（规则2：使用Card、Icon组件）
 
 ---
 
 ### 步骤 4.5：创建天气详情组件
 
-**适用规范**: 开发需求规范 [规则 11] 有条理地分步骤实现
+**适用规范**: 
+- 开发需求规范 [规则 11] 严格遵循提供的示例 → 第183行
+  - 根据原型设计实现2x2网格布局展示详细数据
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - WeatherDetail组件使用PascalCase
+- 命名约定 [约定 10] 类型/接口命名 (PascalCase) → 第315行
+  - DetailItem接口使用PascalCase
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的8个天气指标显示
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用Card、Icon组件
 
 **创建 src/components/Weather/WeatherDetail.tsx**:
 
@@ -707,16 +798,25 @@ export const WeatherDetail: React.FC<WeatherDetailProps> = ({
 ```
 
 **验收标准**:
-- [ ] 所有天气指标显示完整
-- [ ] 图标和颜色美观
-- [ ] 布局响应式
-- [ ] 卡片交互正常
+- [ ] 所有天气指标显示完整（规则1：8个指标包括体感温度、湿度、风速、风向、气压、能见度、降水量、云量）
+- [ ] 图标和颜色美观（规则11：每个指标使用不同颜色和图标）
+- [ ] 布局响应式（需求6：2x2网格布局）
+- [ ] 卡片交互正常（需求2：hover效果）
+- [ ] 组件命名符合规范（约定6：WeatherDetail使用PascalCase）
+- [ ] 接口定义完整（约定10：DetailItem接口使用PascalCase）
+- [ ] 复用现有组件（规则2：使用Card、Icon组件）
 
 ---
 
 ### 步骤 4.6：创建组件统一导出
 
-**适用规范**: 开发需求规范 [规则 2] 复用现有代码和API
+**适用规范**: 
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 创建统一导出文件便于其他模块复用天气组件
+- 命名约定 [约定 5] 文件命名 (kebab-case) → 第154行
+  - 使用index.ts作为模块入口文件
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 导出所有天气组件和类型定义
 
 **创建 src/components/Weather/index.ts**:
 
@@ -747,9 +847,10 @@ export * from './Weather';
 ```
 
 **验收标准**:
-- [ ] 所有组件正确导出
-- [ ] 类型定义正确导出
-- [ ] 导入路径简洁
+- [ ] 所有组件正确导出（规则1：导出WeatherCard、ForecastList、HourlyForecast、WeatherDetail）
+- [ ] 类型定义正确导出（规则1：导出所有Props接口）
+- [ ] 导入路径简洁（规则2：使用@/components/Weather统一导入）
+- [ ] 文件命名符合规范（约定5：使用index.ts）
 
 ---
 
@@ -786,6 +887,35 @@ export * from './Weather';
 完成本阶段后，请继续阅读：
 - **阶段5：核心功能实现 - 时钟和报时**
 - **阶段6：平台适配和Electron集成**
+
+---
+
+---
+
+## 📚 规范文件快速参考
+
+本文档引用的所有规范条款详见:
+
+| 规范类别 | 文件路径 | 规则编号 | 起始行 |
+|---------|---------|---------|--------|
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 2 | 第48行 |
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 11 | 第183行 |
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 12 | 第191行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 2 | 第54行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 4 | 第118行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 6 | 第190行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 10 | 第307行 |
+| 测试规范 | `.qoder/rules/testing-spec.zh-CN.md` | 规则 1 | 第20行 |
+| 测试规范 | `.qoder/rules/testing-spec.zh-CN.md` | 规则 3 | 第75行 |
+| 错误处理规范 | `.qoder/rules/error-handling-spec.zh-CN.md` | 规则 3 | 第116行 |
+| 需求文档 | `requirements.md` | 需求1 | 第9-20行 |
+| 需求文档 | `requirements.md` | 需求2 | 第21-34行 |
+| 需求文档 | `requirements.md` | 需求6 | 第72-84行 |
+| 需求文档 | `requirements.md` | 需求15 | 第201-222行 |
+
+**使用方法**:
+1. 在IDE中使用 `Ctrl+G` (或 `Cmd+G`) 跳转到指定行号
+2. 或在Qoder中使用 `@文件路径` 直接打开规范文件
 
 ---
 
