--- a/开发指导/05-核心功能实现-时钟和报时.md
+++ b/开发指导/05-核心功能实现-时钟和报时.md
@@ -18,20 +18,54 @@
 ## 📖 适用规范清单
 
 ### 核心规范
-- **开发需求规范**
-  - [规则 1] 生成完整可运行代码
-  - [规则 11] 有条理地分步骤实现
-  - [规则 12] 尊重项目命名约定
 
-- **命名约定**
-  - [约定 1] 变量命名 (camelCase)
-  - [约定 2] 函数命名 (camelCase, 动词开头)
-  - [约定 6] 组件命名 (PascalCase)
+#### 开发需求规范
+文件路径: `.qoder/rules/requirements-spec.zh-CN.md`
+
+- **[规则 1] 生成完整可运行代码** → 第20行
+- **[规则 11] 严格遵循提供的示例** → 第183行
+- **[规则 12] 尊重项目命名约定** → 第191行
+
+#### 命名约定
+文件路径: `.qoder/rules/naming-conventions.zh-CN.md`
+
+- **[约定 1] 变量命名** → 第20行 (camelCase)
+- **[约定 2] 函数命名** → 第54行 (camelCase, 动词开头)
+- **[约定 3] 类命名** → 第90行 (PascalCase)
+- **[约定 6] 组件命名** → 第190行 (PascalCase)
 
 ### 质量规范
-- **错误处理规范**
-  - [规则 3] 用户友好的错误提示
-  - [规则 6] 错误恢复策略
+
+#### 错误处理规范
+文件路径: `.qoder/rules/error-handling-spec.zh-CN.md`
+
+- **[规则 3] 用户友好的错误提示** → 第116行
+- **[规则 6] 错误恢复策略** → 第216行
+
+### 需求验收参考
+
+#### 需求文档
+文件路径: `requirements.md`
+
+- **需求12: 整点布谷鸟报时功能** → 第158-171行
+  - 整点播放布谷鸟音效,次数对应小时数
+  - 报时时间段设置(默认8:00-22:00)
+  - 布谷鸟动画(从时钟弹出)
+  - 音量控制和静音模式
+  - 后台运行支持
+
+- **需求13: 实时时钟显示功能** → 第172-186行
+  - 数字时钟和模拟时钟两种样式
+  - 24小时制/12小时制切换
+  - 时针、分针、秒针平滑移动
+  - 多种时钟主题和颜色
+  - 与布谷鸟功能集成
+
+- **需求14: 音频系统和音效管理** → 第187-200行
+  - 支持MP3、WAV、OGG格式
+  - 主音量和分类音量控制
+  - 多种布谷鸟声音选项
+  - 音效预览功能
 
 ---
 
@@ -39,7 +73,15 @@
 
 ### 步骤 5.1：创建时钟Hooks
 
-**适用规范**: 命名约定 [约定 2] 函数命名
+**适用规范**: 
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+  - Hook使用 use + camelCase 命名（useClock、useHourlyChime）
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的Hook实现，无占位符，包含所有必要的类型定义
+- 命名约定 [约定 10] 类型/接口命名 (PascalCase) → 第315行
+  - ClockTime、HourlyChimeOptions接口使用PascalCase
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 使用React原生Hooks（useState、useEffect、useRef）
 
 **创建 src/hooks/use-clock.ts**:
 
@@ -170,15 +212,29 @@ export function useHourlyChime(options: HourlyChimeOptions) {
 ```
 
 **验收标准**:
-- [ ] Hook命名符合规范
-- [ ] 时钟数据更新正确
-- [ ] 整点报时触发准确
+- [ ] Hook命名符合规范（约定2：useClock、useHourlyChime使用use + camelCase）
+- [ ] 时钟数据更新正确（规则1：每秒更新，提供完整的时间信息）
+- [ ] 整点报时触发准确（需求12：整点00分00秒触发）
+- [ ] 代码完整无TODO（规则1：完整实现，无占位符）
+- [ ] 接口定义完整（约定10：ClockTime、HourlyChimeOptions使用PascalCase）
+- [ ] 复用React原生API（规则2：useState、useEffect、useRef）
+- [ ] 时间段控制正确（需求12：默认8:00-22:00报时）
 
 ---
 
 ### 步骤 5.2：创建数字时钟组件
 
-**适用规范**: 命名约定 [约定 6] 组件命名
+**适用规范**: 
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - DigitalClock组件使用PascalCase
+- 命名约定 [约定 10] 类型/接口命名 (PascalCase) → 第315行
+  - DigitalClockProps接口使用PascalCase + Props后缀
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用Card组件、useClock Hook和cn工具函数
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的数字时钟组件实现
+- 开发需求规范 [规则 11] 严格遵循提供的示例 → 第183行
+  - 根据需求13实现24小时制显示
 
 **创建 src/components/Clock/DigitalClock.tsx**:
 
@@ -239,16 +295,32 @@ export const DigitalClock: React.FC<DigitalClockProps> = ({
 ```
 
 **验收标准**:
-- [ ] 时间显示准确
-- [ ] 秒数动画流畅
-- [ ] 日期格式正确
-- [ ] 上午/下午显示正确
+- [ ] 时间显示准确（规则1：HH:MM:SS格式，实时更新）
+- [ ] 秒数动画流畅（需求13：秒针平滑移动，使用animate-pulse）
+- [ ] 日期格式正确（规则1：年月日星期中文显示）
+- [ ] 上午/下午显示正确（需求13：12小时制切换支持）
+- [ ] 组件命名符合规范（约定6：DigitalClock使用PascalCase）
+- [ ] Props接口定义正确（约定10：DigitalClockProps使用PascalCase + Props后缀）
+- [ ] 复用现有组件（规则2：使用Card组件和useClock Hook）
+- [ ] 代码可立即运行（规则1：完整实现，包含所有必要的import）
 
 ---
 
 ### 步骤 5.3：创建模拟时钟组件
 
-**适用规范**: 开发需求规范 [规则 11] 有条理地分步骤实现
+**适用规范**: 
+- 开发需求规范 [规则 11] 严格遵循提供的示例 → 第183行
+  - SVG绘图遵循标准时钟设计规范，实现传统圆形时钟
+- 开发需求规范 [规则 9] 功能优先于完美 → 第163行
+  - 先实现基础时钟显示，后续可添加主题切换
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - AnalogClock组件使用PascalCase
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的SVG时钟实现，包括时针、分针、秒针
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用Card组件和useClock Hook
+- 命名约定 [约定 1] 变量命名 (camelCase) → 第20行
+  - 变量使用camelCase（angles、center、clockRadius等）
 
 **创建 src/components/Clock/AnalogClock.tsx**:
 
@@ -392,16 +464,31 @@ export const AnalogClock: React.FC<AnalogClockProps> = ({
 ```
 
 **验收标准**:
-- [ ] 指针转动流畅
-- [ ] 角度计算正确
-- [ ] SVG渲染正常
-- [ ] 刻度显示清晰
+- [ ] 指针转动流畅（需求13：时针、分针、秒针平滑移动，使用transition）
+- [ ] 角度计算正确（规则1：时针30°/小时，分针6°/分钟，秒针6°/秒）
+- [ ] SVG渲染正常（规则1：完整的SVG元素，包括刻度线和数字）
+- [ ] 刻度显示清晰（规则11：12个刻度线和数字，遵循标准时钟设计）
+- [ ] 遵循标准设计（规则11：传统圆形时钟布局）
+- [ ] 组件命名符合规范（约定6：AnalogClock使用PascalCase）
+- [ ] 变量命名符合规范（约定1：angles、center使用camelCase）
+- [ ] 复用现有组件（规则2：使用Card组件和useClock Hook）
+- [ ] 代码可立即运行（规则1：完整实现，无占位符）
 
 ---
 
 ### 步骤 5.4：创建布谷鸟动画组件
 
-**适用规范**: 开发需求规范 [规则 1] 生成完整可运行代码
+**适用规范**: 
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的布谷鸟动画实现，包括波纹效果
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - CuckooBird组件使用PascalCase
+- 命名约定 [约定 10] 类型/接口命名 (PascalCase) → 第315行
+  - CuckooBirdProps接口使用PascalCase + Props后缀
+- 开发需求规范 [规则 11] 严格遵循提供的示例 → 第183行
+  - 根据需求12实现布谷鸟从时钟弹出的动画效果
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用cn工具函数处理类名
 
 **创建 src/components/Clock/CuckooBird.tsx**:
 
@@ -467,17 +554,34 @@ export const CuckooBird: React.FC<CuckooBirdProps> = ({
 ```
 
 **验收标准**:
-- [ ] 动画效果流畅
-- [ ] 波纹扩散自然
-- [ ] 整点触发正确
+- [ ] 动画效果流畅（需求12：布谷鸟弹出动画，使用scale-110和animate-bounce）
+- [ ] 波纹扩散自然（规则11：双层波纹效果，使用animate-ping）
+- [ ] 整点触发正确（需求12：整点时isAnimating为true，显示动画）
+- [ ] 组件命名符合规范（约定6：CuckooBird使用PascalCase）
+- [ ] Props接口定义正确（约定10：CuckooBirdProps使用PascalCase + Props后缀）
+- [ ] 视觉效果符合设计（需求12：布谷鸟图标、声音波纹、报时文字）
+- [ ] 代码可立即运行（规则1：完整实现，包含所有动画效果）
+- [ ] 复用工具函数（规则2：使用cn函数）
 
 ---
 
 ### 步骤 5.5：创建音频管理器
 
 **适用规范**: 
-- 命名约定 [约定 3] 类命名
-- 错误处理规范 [规则 6] 错误恢复策略
+- 命名约定 [约定 3] 类命名 (PascalCase) → 第90行
+  - AudioManager类使用PascalCase
+- 错误处理规范 [规则 6] 错误恢复策略 → 第216行
+  - 音频上下文初始化失败时优雅降级，使用try-catch捕获错误
+- 开发需求规范 [规则 13] 只使用真实存在的库 → 第199行
+  - 使用浏览器原生Web Audio API，不引入第三方音频库
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+  - 方法名使用camelCase，动词开头（playCuckooSound、setVolume等）
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的音频管理器实现，包括播放、音量控制、资源清理
+- 错误处理规范 [规则 3] 用户友好的错误提示 → 第116行
+  - 音频上下文未初始化时提供友好的警告信息
+- 命名约定 [约定 1] 变量命名 (camelCase) → 第20行
+  - 私有属性使用camelCase（audioContext、gainNode、volume）
 
 **创建 src/utils/audio-manager.ts**:
 
@@ -603,16 +707,36 @@ export const audioManager = new AudioManager();
 ```
 
 **验收标准**:
-- [ ] 音频播放正常
-- [ ] 音量控制有效
-- [ ] 错误处理完整
-- [ ] 资源清理正确
+- [ ] 音频播放正常（需求14：播放布谷鸟音效，支持多次报时）
+- [ ] 音量控制有效（需求14：主音量控制，范围0-1）
+- [ ] 错误处理完整（规则6：音频上下文初始化失败时优雅降级，使用try-catch）
+- [ ] 资源清理正确（规则1：dispose方法关闭音频上下文，释放资源）
+- [ ] 使用原生API（规则13：使用Web Audio API，不依赖第三方库）
+- [ ] 类命名符合规范（约定3：AudioManager使用PascalCase）
+- [ ] 方法命名符合规范（约定2：playCuckooSound、setVolume使用camelCase）
+- [ ] 变量命名符合规范（约定1：audioContext、gainNode使用camelCase）
+- [ ] 错误提示友好（规则3：console.warn提示音频上下文未初始化）
+- [ ] 报时音效准确（需求12：双音符布谷鸟音效，800Hz和600Hz）
+- [ ] 报时间隔合理（需求12：每次报时间隔800ms）
 
 ---
 
 ### 步骤 5.6：创建整合的时钟页面组件
 
-**适用规范**: 开发需求规范 [规则 2] 复用现有代码和API
+**适用规范**: 
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用DigitalClock、AnalogClock、CuckooBird、Button、Icon组件
+  - 复用useHourlyChime Hook和audioManager工具
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - ClockPage组件使用PascalCase
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的时钟页面实现，整合所有功能
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+  - 事件处理函数使用camelCase（handleTestChime等）
+- 命名约定 [约定 1] 变量命名 (camelCase) → 第20行
+  - 状态变量使用camelCase（chimeEnabled、clockType）
+- 开发需求规范 [规则 11] 严格遵循提供的示例 → 第183行
+  - 根据需求12、13实现完整的时钟和报时功能
 
 **创建 src/components/Clock/ClockPage.tsx**:
 
@@ -725,14 +849,30 @@ export const ClockPage: React.FC<ClockPageProps> = ({ className }) => {
 ```
 
 **验收标准**:
-- [ ] 时钟切换正常
-- [ ] 报时开关有效
-- [ ] 测试报时功能正常
-- [ ] 整点自动报时正确
+- [ ] 时钟切换正常（需求13：数字时钟和模拟时钟两种样式切换）
+- [ ] 报时开关有效（需求12：报时开关控制整点报时功能）
+- [ ] 测试报时功能正常（规则1：手动触发报时，播放对应小时数的音效）
+- [ ] 整点自动报时正确（需求12：整点00分00秒自动触发，播放对应次数）
+- [ ] 组件命名符合规范（约定6：ClockPage使用PascalCase）
+- [ ] 函数命名符合规范（约定2：handleTestChime使用camelCase）
+- [ ] 变量命名符合规范（约定1：chimeEnabled、clockType使用camelCase）
+- [ ] 复用现有组件（规则2：使用DigitalClock、AnalogClock、CuckooBird、Button、Icon）
+- [ ] 复用Hooks和工具（规则2：使用useHourlyChime和audioManager）
+- [ ] 报时时间段正确（需求12：8:00-22:00时间段控制）
+- [ ] 报时次数正确（需求12：12小时制，报时次数对应当前小时数）
+- [ ] 代码可立即运行（规则1：完整实现，包含所有必要的import和状态管理）
 
 ---
 
 ### 步骤 5.7：创建组件导出
+
+**适用规范**: 
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 创建统一导出文件便于其他模块复用时钟组件
+- 命名约定 [约定 5] 文件命名 (kebab-case) → 第154行
+  - 使用index.ts作为模块入口文件
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 导出所有时钟组件、Hooks和类型定义
 
 **创建 src/components/Clock/index.ts**:
 
@@ -759,6 +899,13 @@ export type { ClockTime } from './use-clock';
 export { useHourlyChime } from './use-hourly-chime';
 export type { HourlyChimeOptions } from './use-hourly-chime';
 ```
+
+**验收标准**:
+- [ ] 所有组件正确导出（规则1：导出DigitalClock、AnalogClock、CuckooBird、ClockPage）
+- [ ] 所有Hooks正确导出（规则1：导出useClock、useHourlyChime）
+- [ ] 类型定义正确导出（规则1：导出所有Props接口和Options接口）
+- [ ] 导入路径简洁（规则2：使用@/components/Clock和@/hooks统一导入）
+- [ ] 文件命名符合规范（约定5：使用index.ts）
 
 ---
 
@@ -794,6 +941,33 @@ export type { HourlyChimeOptions } from './use-hourly-chime';
 完成本阶段后，请继续阅读：
 - **阶段6：测试和质量保证**
 - **阶段7：文档和部署**
+
+---
+
+---
+
+## 📚 规范文件快速参考
+
+本文档引用的所有规范条款详见:
+
+| 规范类别 | 文件路径 | 规则编号 | 起始行 |
+|---------|---------|---------|--------|
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 1 | 第20行 |
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 11 | 第183行 |
+| 开发需求规范 | `.qoder/rules/requirements-spec.zh-CN.md` | 规则 12 | 第191行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 1 | 第20行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 2 | 第54行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 3 | 第90行 |
+| 命名约定 | `.qoder/rules/naming-conventions.zh-CN.md` | 约定 6 | 第190行 |
+| 错误处理规范 | `.qoder/rules/error-handling-spec.zh-CN.md` | 规则 3 | 第116行 |
+| 错误处理规范 | `.qoder/rules/error-handling-spec.zh-CN.md` | 规则 6 | 第216行 |
+| 需求文档 | `requirements.md` | 需求12 | 第158-171行 |
+| 需求文档 | `requirements.md` | 需求13 | 第172-186行 |
+| 需求文档 | `requirements.md` | 需求14 | 第187-200行 |
+
+**使用方法**:
+1. 在IDE中使用 `Ctrl+G` (或 `Cmd+G`) 跳转到指定行号
+2. 或在Qoder中使用 `@文件路径` 直接打开规范文件
 
 ---
 
